# pawprint-panic

./: Cargo.toml  icon.svg.import  project.godot
addons/godot-git-plugin/: git_plugin.gdextension.uid
assets/: hole_planet.glb  hole_planet.gltf
blender/: blender_assets.cats.txt~  hole_planet.blend  mousy-texture.png.import  mousy.blend.import  scratch.blend  scratch.blend1  tutorial_planet.blend  tutorial_planet.blend.import
blockbench/: Scratch.bbmodel
force_fields/: force_field.gd  force_field.gd.uid  half_plane_force_field.gd  half_plane_force_field.gd.uid  sphere_force_field.gd  sphere_force_field.gd.uid
levels/: record_scratch.tscn  tutorial.tscn
levels/tutorial/: starsky.gdshader.uid
levels/tutorial/assets/: button_platform.blend  button_platform.blend.import  material.res  plastic.ptex  plastic.ptex.mmcr  plastic_material.tres  plastic_material_albedo.png.import  plastic_material_normal.png.import  plastic_material_orm.png.import  tutorial_planet.blend  tutorial_planet.blend.import  tutorial_planet.glb  tutorial_planet.glb.import  wood.ptex  wool.ptex  (+13 more)
mousey/: colorized-texture.tres  mousy-texture.png.import  mousy.blend  mousy.blend.import  mousy.gd  mousy.gd.uid  mousy.glb  mousy.glb.import  mousy.tscn  mousy_mousy-texture.png.import
player/: camera_anchor.gd  camera_anchor.gd.uid  camera_arm.gd  camera_arm.gd.uid  force_field_detector.gd  force_field_detector.gd.uid  player.blend  player.blend.import  player.gd  player.gd.uid  player.tscn
src/: debug.rs  main.rs  plugin.rs
src/plugin/: camera_controller.rs  character_controller.rs  level.rs
